Entities and IGenericRepository

--- a/NetCoreApi5TokenAuth.Data/NetCoreApi5TokenAuth.Data.csproj
+++ b/NetCoreApi5TokenAuth.Data/NetCoreApi5TokenAuth.Data.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\NetCoreApi5TokenAuth.Core\NetCoreApi5TokenAuth.Core.csproj" />
+  </ItemGroup>
+
 </Project>
