--- a/NetCoreApi5TokenAuth.Core/NetCoreApi5TokenAuth.Core.csproj
+++ b/NetCoreApi5TokenAuth.Core/NetCoreApi5TokenAuth.Core.csproj
@@ -4,4 +4,12 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="1.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Repositories\Concrete\" />
+  </ItemGroup>
+
 </Project>
