--- a/NetCoreApi5TokenAuth.Core/NetCoreApi5TokenAuth.Core.csproj
+++ b/NetCoreApi5TokenAuth.Core/NetCoreApi5TokenAuth.Core.csproj
@@ -10,6 +10,11 @@
 
   <ItemGroup>
     <Folder Include="Repositories\Concrete\" />
+    <Folder Include="Services\Concrete\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\SharedLibrary\SharedLibrary.csproj" />
   </ItemGroup>
 
 </Project>
