ContentDto, DtoMapper, ObjectMapper

--- a/NetCoreApi5TokenAuth.Service/NetCoreApi5TokenAuth.Service.csproj
+++ b/NetCoreApi5TokenAuth.Service/NetCoreApi5TokenAuth.Service.csproj
@@ -8,4 +8,8 @@
     <ProjectReference Include="..\NetCoreApi5TokenAuth.Data\NetCoreApi5TokenAuth.Data.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="10.1.1" />
+  </ItemGroup>
+
 </Project>
