SingService and CustomTokenOption

--- a/NetCoreApi5TokenAuth.API/appsettings.json
+++ b/NetCoreApi5TokenAuth.API/appsettings.json
@@ -1,4 +1,11 @@
 {
+  "TokenOption": {
+    "Audience": [ "www.ozgurgelekci.com", "", "" ],
+    "Issuer": "www.ozgurgelekci.com",
+    "AccessTokenExpiration": 5,
+    "RefreshTokenExpiration": 600,
+    "SecurityKey": "mysecuritykey!*?=thisismysecuritykey"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
