--- a/NetCoreApi5TokenAuth.API/appsettings.json
+++ b/NetCoreApi5TokenAuth.API/appsettings.json
@@ -6,6 +6,13 @@
     "RefreshTokenExpiration": 600,
     "SecurityKey": "mysecuritykey!*?=thisismysecuritykey"
   },
+  "Clients": [
+    {
+      "Id": "SpaApp",
+      "Secret": "secret",
+      "Audiences": [ "" ]
+    }
+  ],
   "Logging": {
     "LogLevel": {
       "Default": "Information",
