AddDependencies, AddIdentity and AddDbContext

--- a/NetCoreApi5TokenAuth.API/appsettings.json
+++ b/NetCoreApi5TokenAuth.API/appsettings.json
@@ -13,6 +13,9 @@
       "Audiences": [ "" ]
     }
   ],
+  "ConnectionString": {
+    "SqlServer": "Data Source=.;Initial Catalog=tokenDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
