--- a/NetCoreApi5TokenAuth.API/appsettings.json
+++ b/NetCoreApi5TokenAuth.API/appsettings.json
@@ -13,7 +13,7 @@
       "Audiences": [ "" ]
     }
   ],
-  "ConnectionString": {
+  "ConnectionStrings": {
     "SqlServer": "Data Source=.;Initial Catalog=tokenDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
   "Logging": {
